add merge from next branche with font tags